// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes basic 1`] = `
<div
  className="css-1mzou9w"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes basic 2`] = `
Array [
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  ".css-1mzou9w{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
]
`;

exports[`keyframes keyframes used in css call 1`] = `
<div
  className="css-1jqzi3u"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes keyframes used in css call 2`] = `
Array [
  "@-webkit-keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  ".css-1jqzi3u{-webkit-animation:animation-1bi8wtt 1s animation-1ajb83a;animation:animation-1bi8wtt 1s animation-1ajb83a;}",
]
`;

exports[`keyframes multiple keyframes object 1`] = `
<div
  className="css-1jqzi3u"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes multiple keyframes object 2`] = `
Array [
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@-webkit-keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  ".css-1jqzi3u{-webkit-animation:animation-1bi8wtt 1s animation-1ajb83a;animation:animation-1bi8wtt 1s animation-1ajb83a;}",
]
`;

exports[`keyframes object 1`] = `
<div
  className="css-d88cqt"
>
  animation-o4c3es
</div>
`;

exports[`keyframes object 2`] = `
Array [
  "@-webkit-keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
  ".css-d88cqt{-webkit-animation:animation-o4c3es 1s;animation:animation-o4c3es 1s;}",
]
`;

exports[`keyframes object with string keyframes 1`] = `
<div
  className="css-1wh2ide"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with string keyframes 2`] = `
Array [
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  ".css-1wh2ide{-webkit-animation:animation-1bi8wtt 1s;animation:animation-1bi8wtt 1s;}",
]
`;

exports[`keyframes without css call 1`] = `
<div
  className="css-1mzou9w"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes without css call 2`] = `
Array [
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  ".css-1mzou9w{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
]
`;
